feat: add workflow orchestration with SEEDFW steps and OpenCode agent integration
- Add workflow, workflow_step, and tech_stack_decision database tables
- Implement WorkflowOrchestrator for 7-step SeedFW execution
- Add BeadsManager for task tracking via Beads CLI
- Add workflow API endpoints for job workflow management
- Add session_id tracking for OpenCode agent sessions
- Add mock opencode_functions for testing
- Add OpenCode launch script for manual agent execution
- Update docker-compose with volume mounts for workspaces, migrations, config
- Fix migration reference chain issue

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,22 @@
 services:
   app:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "8001:8000"
     environment:
       - DATABASE_URL=postgresql+asyncpg://postgres:postgres@localdb:5432/upwork_processing
       - CEREBRAS_API_KEY=${CEREBRAS_API_KEY:-test_mode}
       - LOG_LEVEL=INFO
+      - BEADS_BIN=/usr/local/bin/bd
     depends_on:
       - localdb
+    volumes:
+      - ./projects:/app/projects
+      - ./migrations:/app/migrations
+      - ~/.config/opencode:/root/.config/opencode
+      - ~/.local/bin/bd:/usr/local/bin/bd
 
   localdb:
     image: pgvector/pgvector:pg16
